# opencv-static-windows-buildenv-docker

./: .gitignore  README.md  compile.sh  make-buildenv.sh
buildenv-docker/: Dockerfile
src/: CMakeLists.txt  opencv-test.cpp  udp-test.cpp
